# rqm

./: .gitignore  .prettierignore  .prettierrc.json  PROGRESS.ai.md  RDD.ai.md  README.md  TESTING.md  agents.md  commitlint.config.js  package-lock.json  package.json
.github/: copilot-instructions.md
.github/workflows/: README.md  build-dev.yml  ci.yml  release.yml
.rqm/: requirements.yml
docs/: PROGRESS.ai.md  RDD.ai.md  SESSION_SUMMARY.md  TESTING.md  TESTING_PROGRESS.md  schema.json
examples/: sample-requirements.yml
go-cli/: README.md  coverage.out  go.mod  main.go
go-cli/cmd/: agent_instructions.go  check.go  check_test.go  list.go  list_test.go  root.go  serve.go  validate.go  validate_cgo.go  validate_test.go
go-cli/pkg/rqmcore/: validator.go
rust-core/: Cargo.toml  rqm_core.h
rust-core/src/: error.rs  ffi.rs  graph.rs  lib.rs  metadata.rs  parser.rs  types.rs  validator.rs
scripts/: build-binaries.sh  build-rqm.sh  install-dev-build.sh  install.sh
tests/acceptance/: collect_coverage.sh  run_all_tests.sh  test_circular_references.sh  test_cli_check.sh  test_cli_graph.sh  test_cli_list.sh  test_cli_validate.sh  test_rdd_workflow.sh  test_rqm001_subrequirements.sh  test_rqm002_subrequirements.sh  test_rqm003_subrequirements.sh  test_rqm004_subrequirements.sh  test_validation.sh
tests/acceptance/fixtures/: circular.yml  circular_complex.yml  circular_deep.yml  circular_diamond.yml  circular_none.yml  circular_self.yml  circular_simple.yml  cli_integration.yml  cli_invalid.yml  (+43 more)
web-ui/: package.json
web-ui/src/: App.tsx  index.css
(+6 files in other folders)
